--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--<link href="css/bootstrap.min.css" rel="stylesheet"> este es el de bostrap lo saque para hacer css de la pagina-->
     <!--<link href="css/bootstrap.min.css.map" rel="stylesheet">-->
     <!--<link href="css/font-awesome.min.css" rel="stylesheet">-->
-    <script src="/js/index.js"></script>
+    <script src="js/index.js"></script>
     
     </head>
 <body class="fondo">
